--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,8 +36,12 @@ android {
 
     buildFeatures{
         viewBinding true
-        dataBinding true
     }
+
+    dataBinding {
+        enabled = true
+    }
+
 }
 
 dependencies {
@@ -77,5 +81,8 @@ dependencies {
 
     //Material
     implementation "com.google.android.material:material:1.3.0"
+
+    //Custom Toast
+    implementation 'com.pranavpandey.android:dynamic-toasts:3.3.1'
 
 }
