--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.BlocoDeNotas">
-        <activity android:name=".activity.UpdateNotesActivity"></activity>
-        <activity android:name=".activity.InsertNotesActivity" />
-        <activity android:name=".MainActivity" />
-        <activity android:name=".activity.SplashScreenActivity">
+               <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
