--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-kapt'
     id 'androidx.navigation.safeargs.kotlin'
+    id 'kotlin-parcelize'
 
 }
 
@@ -12,7 +13,7 @@ android {
 
     defaultConfig {
         applicationId "com.raquel.blocodenotas"
-        minSdkVersion 26
+        minSdkVersion 28
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
@@ -84,5 +85,7 @@ dependencies {
 
     //Custom Toast
     implementation 'com.pranavpandey.android:dynamic-toasts:3.3.1'
+
+
 
 }
